--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
     <header class="header">
       <div class="container header-container">
         <!--logo-->
-        <a href="" lang="en" class="logo"
-          >Web<span class="colortext-header">Studio</span></a
+        <a href="" lang="en" class="header__logo"
+          >Web<span class="header__colortext">Studio</span></a
         >
-        <nav class="navigation">
-          <ul class="list-index">
-            <li class="item-index">
-              <a href="" class="link current">Студия</a>
+        <nav class="header-navigation">
+          <ul class="header-navigation__list">
+            <li class="header-navigation__item">
+              <a href="" class="header-navigation__link current">Студия</a>
             </li>
-            <li class="item-index">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+            <li class="header-navigation__item">
+              <a href="./portfolio.html" class="header-navigation__link">Портфолио</a>
             </li>
-            <li class="item-index">
-              <a href="" class="link">Контакты</a>
+            <li class="header-navigation__item">
+              <a href="" class="header-navigation__link">Контакты</a>
             </li>
           </ul>
         </nav>
