--- a/portfolio.html
+++ b/portfolio.html
@@ -22,24 +22,24 @@
     <header class="header">
       <div class="container header-container">
         <!--logo-->
-        <a href="" lang="en" class="logo"
-          >Web<span class="colortext-header">Studio</span></a
+        <a href="" lang="en" class="header__logo"
+          >Web<span class="header__colortext">Studio</span></a
         >
-        <section>
-          <nav class="navigation">
-            <ul class="list-index">
-              <li class="item-index">
-                <a href="./index.html" class="link">Студия</a>
+        
+          <nav class="header-navigation">
+            <ul class="header-navigation__list">
+              <li class="header-navigation__item">
+                <a href="./index.html" class="header-navigation__link">Студия</a>
               </li>
-              <li class="item-index">
-                <a href="./portfolio.html" class="link current">Портфолио</a>
+              <li class="header-navigation__item">
+                <a href="./portfolio.html" class="header-navigation__link current">Портфолио</a>
               </li>
-              <li class="item-index">
-                <a href="" class="link">Контакты</a>
+              <li class="header-navigation__item">
+                <a href="" class="header-navigation__link">Контакты</a>
               </li>
             </ul>
           </nav>
-        </section>
+        
         <ul class="contacts">
           <li class="item-contacts-mail">
             <a href="" class="link-contacts-mail">
