--- a/portfolio.html
+++ b/portfolio.html
@@ -41,17 +41,17 @@
           </nav>
         
         <ul class="contacts">
-          <li class="item-contacts-mail">
-            <a href="" class="link-contacts-mail">
-              <svg class="icon-mail" width="16" height="12">
+          <li class="contacts__item">
+            <a href="" class="contacts__link">
+              <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="item-contacts-tel">
-            <a href="" class="link-contacts-tel">
-              <svg class="icon-phone" width="10" height="16">
+          <li class="contacts__item">
+            <a href="" class="contacts__link">
+              <svg class="contacts__icon" width="10" height="16">
                 <use href="./images/symbol-defs.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11</a
