--- a/index.html
+++ b/index.html
@@ -18,25 +18,26 @@
     />
     <link rel="stylesheet" href="./images/symbol-defs.svg" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
 
   <body class="page">
     <header class="header">
-      <div class="container header-container">
+      <div class="container header__container">
         <!--logo-->
         <a href="" lang="en" class="header__logo"
           >Web<span class="header__colortext">Studio</span></a
         >
-        <nav class="header-navigation">
-          <ul class="header-navigation__list">
-            <li class="header-navigation__item">
-              <a href="" class="header-navigation__link current">Студия</a>
+        <nav class="navigation">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="" class="navigation__link current">Студия</a>
             </li>
-            <li class="header-navigation__item">
-              <a href="./portfolio.html" class="header-navigation__link">Портфолио</a>
+            <li class="navigation__item">
+              <a href="./portfolio.html" class="navigation__link">Портфолио</a>
             </li>
-            <li class="header-navigation__item">
-              <a href="" class="header-navigation__link">Контакты</a>
+            <li class="navigation__item">
+              <a href="" class="navigation__link">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -64,7 +65,7 @@
       <!--hero-->
       <section class="hero">
         <div class="container">
-          <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="title hero__title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="hero__btn" data-modal-open>
             Заказать услугу
           </button>
@@ -133,7 +134,7 @@
       <!--work-->
       <section class="work section">
         <div class="container">
-          <h2 class="work__title">Чем мы занимаемся</h2>
+          <h2 class="title work__title">Чем мы занимаемся</h2>
           <ul class="work__list">
             <li class="work__item">
               <div class="work__option">
@@ -171,7 +172,7 @@
       <!--team-->
       <section class="team section">
         <div class="container">
-          <h2 class="team__title">Наша команда</h2>
+          <h2 class="title team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__item">
               <img
@@ -445,51 +446,51 @@
       <!--clients-->
       <section class="clients section">
         <div class="container">
-          <h2 class="section-title">Постоянные клиенты</h2>
-          <ul class="clients">
-            <li class="clients-item">
-              <a href="" class="clients-link">
-                <svg class="clients-icon" width="106" height="60">
+          <h2 class="title clients__title">Постоянные клиенты</h2>
+          <ul class="clients__list">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="clients-item">
-              <a href="" class="clients-link">
-                <svg class="clients-icon" width="106" height="60">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="clients-item">
-              <a href="" class="clients-link">
-                <svg class="clients-icon" width="106" height="60">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="clients-item">
-              <a href="" class="clients-link">
-                <svg class="clients-icon" width="106" height="60">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="clients-item">
-              <a href="" class="clients-link">
-                <svg class="clients-icon" width="106" height="60">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="clients-item">
-              <a href="" class="clients-link">
-                <svg class="clients-icon" width="106" height="60">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client6"></use>
                 </svg>
               </a>
