--- a/portfolio.html
+++ b/portfolio.html
@@ -17,29 +17,28 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body class="page">
     <header class="header">
-      <div class="container header-container">
+      <div class="container header__container">
         <!--logo-->
         <a href="" lang="en" class="header__logo"
           >Web<span class="header__colortext">Studio</span></a
         >
-        
-          <nav class="header-navigation">
-            <ul class="header-navigation__list">
-              <li class="header-navigation__item">
-                <a href="./index.html" class="header-navigation__link">Студия</a>
-              </li>
-              <li class="header-navigation__item">
-                <a href="./portfolio.html" class="header-navigation__link current">Портфолио</a>
-              </li>
-              <li class="header-navigation__item">
-                <a href="" class="header-navigation__link">Контакты</a>
-              </li>
-            </ul>
-          </nav>
-        
+        <nav class="navigation">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="./index.html" class="navigation__link">Студия</a>
+            </li>
+            <li class="navigation__item">
+              <a href="" class="navigation__link current">Портфолио</a>
+            </li>
+            <li class="navigation__item">
+              <a href="" class="navigation__link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
         <ul class="contacts">
           <li class="contacts__item">
             <a href="" class="contacts__link">
@@ -52,7 +51,7 @@
           <li class="contacts__item">
             <a href="" class="contacts__link">
               <svg class="contacts__icon" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-phone"></use>
+                <use href="./images/symbol-defs.svg#icon-phone1"></use>
               </svg>
               +38 096 111 11 11</a
             >
