studio (bem done)

--- a/index.html
+++ b/index.html
@@ -504,28 +504,28 @@
         <div class="footer-container">
           <div class="address-box">
             <!--logo-->
-            <a href="" class="logo-footer"
-              >Web<span class="colortext-footer">Studio</span></a
+            <a href="" class="footer__logo"
+              >Web<span class="footer__colortext">Studio</span></a
             >
             <address class="address">
-              <ul class="address-list">
-                <li class="footer-item">г. Киев, пр-т Леси Украинки, 26</li>
-                <li class="footer-item">
-                  <a href="" class="mail" lang="en">info@example.com</a>
+              <ul class="address__list">
+                <li class="address__item">г. Киев, пр-т Леси Украинки, 26</li>
+                <li class="address__item">
+                  <a href="" class="address__link" lang="en">info@example.com</a>
                 </li>
-                <li class="footer-item">
-                  <a href="" class="tel">+38 099 111 11 11</a>
+                <li class="address__item">
+                  <a href="" class="address__link">+38 099 111 11 11</a>
                 </li>
               </ul>
             </address>
           </div>
-          <div class="socialbox">
-            <p class="join">присоединяйтесь</p>
-            <ul class="social-list">
-              <li class="social-item">
+          <div class="social">
+            <p class="social__text">присоединяйтесь</p>
+            <ul class="social__list">
+              <li class="social__item">
                 <a
                   href=""
-                  class="social-link-footer"
+                  class="social__link--footer"
                   rel="noopener noreferrer"
                   aria-label="icon instagram"
                 >
@@ -534,10 +534,10 @@
                   </svg>
                 </a>
               </li>
-              <li class="social-item">
+              <li class="social__item">
                 <a
                   href=""
-                  class="social-link-footer"
+                  class="social__link--footer"
                   rel="noopener noreferrer"
                   aria-label="icon twitter"
                 >
@@ -546,10 +546,10 @@
                   </svg>
                 </a>
               </li>
-              <li class="social-item">
+              <li class="social__item">
                 <a
                   href=""
-                  class="social-link-footer"
+                  class="social__link--footer"
                   rel="noopener noreferrer"
                   aria-label="icon facebook"
                 >
@@ -558,10 +558,10 @@
                   </svg>
                 </a>
               </li>
-              <li class="social-item">
+              <li class="social__item">
                 <a
                   href=""
-                  class="social-link-footer"
+                  class="social__link--footer"
                   rel="noopener noreferrer"
                   aria-label="icon linkedin"
                 >
